2010-06-14  Eric B. Weddington  <eric.weddington@atmel.com>

	* LICENSE: Update copyright year.

2010-06-14  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/pgmspace.h: Remove new features regarding new segments.
	Feature not yet ready. Correct comment.

2010-06-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/pgmspace.h: Remove the #error for architectures that
	don't support segmented progmem access.

2010-06-12  Eric B. Weddington  <eric.weddington@atmel.com>

	Special thanks to Carlos Lamas and Jan Waclawek for contributing
	code in patch #6352 (that should've gotten in a long time ago).
	* libc/pmstring/Files.am: Add new files to list.
	* libc/pmstring/memcmp_PF.S: New file.
	* libc/pmstring/memcpy_PF.S: Same.
	* libc/pmstring/strcasecmp_PF.S: Same.
	* libc/pmstring/strcat_PF.S: Same.
	* libc/pmstring/strcmp_PF.S: Same.
	* libc/pmstring/strcpy_PF.S: Same.
	* libc/pmstring/strlcat_PF.S: Same.
	* libc/pmstring/strlcpy_PF.S: Same.
	* libc/pmstring/strlen_PF.S: Same.
	* libc/pmstring/strncasecmp_PF.S: Same.
	* libc/pmstring/strncat_PF.S: Same.
	* libc/pmstring/strncmp_PF.S: Same.
	* libc/pmstring/strncpy_PF.S: Same.
	* libc/pmstring/strnlen_PF.S: Same.
	* libc/pmstring/strstr_PF.S: Same.
	* include/avr/pgmspace.h: Add support for far program memory
	functions and macros.
	* NEWS: Add news items.

2010-06-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Atmel bug #11742.
	* include/avr/iox128a1u.h: Change EBI_CS_ASPACE* to
	EBI_CS_ASIZE*.
	* include/avr/iox128a1.h: Same.
	* include/avr/iox128a3.h: Same.
	* include/avr/iox128d3.h: Same.
	* include/avr/iox16a4.h: Same.
	* include/avr/iox16d4.h: Same.
	* include/avr/iox192a3.h: Same.
	* include/avr/iox192d3.h: Same.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox256a3b.h: Same.
	* include/avr/iox256d3.h: Same.
	* include/avr/iox32a4.h: Same.
	* include/avr/iox32d4.h: Same.
	* include/avr/iox64a1.h: Same.
	* include/avr/iox64a1u.h: Same.
	* include/avr/iox64a3.h: Same.