@@ -896,22 +896,17 @@ AM_CONDITIONAL(HAS_atmega2561, test "x$HAS_atmega2561" = "xyes")
 CHECK_AVR_DEVICE(avrxmega2)
 AM_CONDITIONAL(HAS_avrxmega2, test "x$HAS_avrxmega2" = "xyes")
 
-CHECK_AVR_DEVICE(atxmega32d4)
-AM_CONDITIONAL(HAS_atxmega32d4, test "x$HAS_atxmega32d4" = "xyes")
-
 CHECK_AVR_DEVICE(atxmega16a4)
 AM_CONDITIONAL(HAS_atxmega16a4, test "x$HAS_atxmega16a4" = "xyes")
 
 CHECK_AVR_DEVICE(atxmega16d4)
 AM_CONDITIONAL(HAS_atxmega16d4, test "x$HAS_atxmega16d4" = "xyes")
 
-
-# avrxmega3
-CHECK_AVR_DEVICE(avrxmega3)
-AM_CONDITIONAL(HAS_avrxmega3, test "x$HAS_avrxmega3" = "xyes")
-
 CHECK_AVR_DEVICE(atxmega32a4)
 AM_CONDITIONAL(HAS_atxmega32a4, test "x$HAS_atxmega32a4" = "xyes")
+
+CHECK_AVR_DEVICE(atxmega32d4)
+AM_CONDITIONAL(HAS_atxmega32d4, test "x$HAS_atxmega32d4" = "xyes")
 
 
 # avrxmega4
@@ -1258,15 +1253,10 @@ AC_CONFIG_FILES([
 # avrxmega2
 AC_CONFIG_FILES([
 	avr/lib/avrxmega2/Makefile
-	avr/lib/avrxmega2/atxmega32d4/Makefile
 	avr/lib/avrxmega2/atxmega16a4/Makefile
 	avr/lib/avrxmega2/atxmega16d4/Makefile
-])
-
-# avrxmega3
-AC_CONFIG_FILES([
-	avr/lib/avrxmega3/Makefile
-	avr/lib/avrxmega3/atxmega32a4/Makefile
+	avr/lib/avrxmega2/atxmega32a4/Makefile
+	avr/lib/avrxmega2/atxmega32d4/Makefile
 ])
 
 # avrxmega4
